--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
-include README.rst
-include versioneer.py
+include README.md
 include pyls/_version.py
-include LICENSE
+include LICENSE.txt
 recursive-include test *.py
