Tell setup.py to build universal wheels

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,3 +8,6 @@ testpaths = test
 addopts =
     --cov-report html --cov-report term --junitxml=pytest.xml
     --cov pyls --cov test
+
+[bdist_wheel]
+universal=1
