--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run: pip install -e .[all] .[test]
       - run: py.test test/
-      - run: pylint pyls test --ignore-patterns="pyls/pyls_race_py3.py"
+      - run: pylint pyls test --ignore-patterns="pyls_race_py3.py"
       - run: pycodestyle pyls test
       - run: pyflakes pyls test
 
